Refresh plugin for March 2023