@@ -5,8 +5,7 @@
     <parent>
         <groupId>org.jenkins-ci.plugins</groupId>
         <artifactId>build-monitor</artifactId>
-        <version>1.13-SNAPSHOT</version>
-        <relativePath>../pom.xml</relativePath>
+        <version>${revision}-${changelist}</version>
     </parent>
 
     <artifactId>build-monitor-plugin</artifactId>
@@ -44,18 +43,9 @@
 
     </contributors>
 
-    <scm>
-        <connection>scm:git:ssh://github.com/jan-molak/jenkins-build-monitor-plugin.git</connection>
-        <developerConnection>scm:git:ssh://git@github.com/jan-molak/jenkins-build-monitor-plugin.git</developerConnection>
-        <url>https://github.com/jan-molak/jenkins-build-monitor-plugin</url>
-    </scm>
-
     <properties>
-        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-        <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
-
-        <node.version>v16.13.0</node.version>
-        <npm.version>8.1.0</npm.version>
+        <node.version>18.14.2</node.version>
+        <npm.version>9.5.0</npm.version>
         <selenium.version>2.43.0</selenium.version>
         <build.number>DEV</build.number>
     </properties>
@@ -86,8 +76,8 @@
         <dependencies>
             <dependency>
                 <groupId>io.jenkins.tools.bom</groupId>
-                <artifactId>bom-2.303.x</artifactId>
-                <version>1370.vfa_e23fe119c3</version>
+                <artifactId>bom-2.361.x</artifactId>
+                <version>1887.vda_d0ddb_c15c4</version>
                 <scope>import</scope>
                 <type>pom</type>
             </dependency>
@@ -103,7 +93,6 @@
         <dependency>
             <groupId>org.jenkins-ci.modules</groupId>
             <artifactId>instance-identity</artifactId>
-            <scope>provided</scope>
         </dependency>
 
         <!-- Jenkins CI plugins supported by the Build Monitor -->
@@ -184,6 +173,23 @@
         </dependency>
 
         <dependency>
+            <groupId>org.jenkins-ci.plugins</groupId>
+            <artifactId>description-setter</artifactId>
+            <version>1.10</version>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.jenkins-ci.plugins</groupId>
+            <artifactId>external-monitor-job</artifactId>
+            <version>203.v683c09d993b_9</version>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.jenkins-ci.plugins.workflow</groupId>
+            <artifactId>workflow-basic-steps</artifactId>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
             <groupId>io.jenkins</groupId>
             <artifactId>configuration-as-code</artifactId>
             <scope>test</scope>
@@ -196,11 +202,6 @@
         <!-- /Jenkins CI plugins supported by the Build Monitor -->
 
         <dependency>
-            <groupId>junit</groupId>
-            <artifactId>junit</artifactId>
-            <scope>test</scope>
-        </dependency>
-        <dependency>
             <groupId>org.mockito</groupId>
             <artifactId>mockito-inline</artifactId>
             <scope>test</scope>
@@ -209,26 +210,6 @@
 
     <build>
         <plugins>
-            <plugin>
-                <groupId>biz.gabrys.maven.plugins</groupId>
-                <artifactId>lesscss-maven-plugin</artifactId>
-                <version>1.2.1</version>
-                <configuration>
-                    <sourceDirectory>${project.basedir}/src/main/webapp/less</sourceDirectory>
-                        <includes>
-                            <include>index.less</include>
-                        </includes>
-                <outputDirectory>${project.build.directory}/${project.build.finalName}/styles</outputDirectory>
-                </configuration>
-                <executions>
-                    <execution>
-                        <id>compile-less</id>
-                        <goals>
-                            <goal>compile</goal>
-                        </goals>
-                    </execution>
-                </executions>
-            </plugin>
             <plugin>
                 <groupId>com.github.klieber</groupId>
                 <artifactId>phantomjs-maven-plugin</artifactId>
@@ -244,97 +225,6 @@
                 <configuration>
                     <version>1.9.7</version>
                 </configuration>
-            </plugin>
-
-            <plugin>
-                <artifactId>maven-surefire-plugin</artifactId>
-                <configuration>
-                    <argLine>-Xmx4096m -XX:PermSize=256m -XX:MaxPermSize=2048m</argLine>
-                    <systemProperties>
-                        <property>
-                            <name>hudson.udp</name>
-                            <value>33849</value>
-                        </property>
-                    </systemProperties>
-                </configuration>
-            </plugin>
-            <plugin>
-                <groupId>com.smartcodeltd</groupId>
-                <artifactId>release-candidate-maven-plugin</artifactId>
-                <executions>
-                    <execution>
-                        <phase>process-resources</phase>
-                        <goals>
-                            <goal>version</goal>
-                        </goals>
-                        <configuration>
-                            <outputTemplate>version={{ version }}</outputTemplate>
-                            <outputUri>${project.baseUri}/target/classes/build-monitor.properties</outputUri>
-                        </configuration>
-                    </execution>
-                </executions>
-            </plugin>
-            <plugin>
-                <groupId>com.github.eirslett</groupId>
-                <artifactId>frontend-maven-plugin</artifactId>
-                <version>1.12.1</version>
-                <executions>
-                    <execution>
-                        <id>install node and npm</id>
-                        <goals>
-                            <goal>install-node-and-npm</goal>
-                        </goals>
-                        <phase>generate-test-resources</phase>
-                        <configuration>
-                            <nodeVersion>${node.version}</nodeVersion>
-                            <npmVersion>${npm.version}</npmVersion>
-                        </configuration>
-                    </execution>
-                    <execution>
-                        <id>npm install</id>
-                        <goals>
-                            <goal>npm</goal>
-                        </goals>
-                        <phase>generate-test-resources</phase>
-                        <configuration>
-                            <arguments>install --silent</arguments>
-                        </configuration>
-                    </execution>
-                    <execution>
-                        <id>karma</id>
-                        <goals>
-                            <goal>karma</goal>
-                        </goals>
-                        <phase>test</phase>
-                        <configuration>
-                            <karmaConfPath>src/test/resources/karma.conf.ci.js</karmaConfPath>
-                        </configuration>
-                    </execution>
-                </executions>
-            </plugin>
-            <plugin>
-                <groupId>org.jacoco</groupId>
-                <artifactId>jacoco-maven-plugin</artifactId>
-                <version>0.8.8</version>
-                <configuration>
-                    <destFile>${project.build.directory}/coverage/jacoco-unit.exec</destFile>
-                    <dataFile>${project.build.directory}/coverage/jacoco-unit.exec</dataFile>
-                </configuration>
-                <executions>
-                    <execution>
-                        <id>jacoco-initialize</id>
-                        <goals>
-                            <goal>prepare-agent</goal>
-                        </goals>
-                    </execution>
-                    <execution>
-                        <id>jacoco-site</id>
-                        <phase>post-integration-test</phase>
-                        <goals>
-                            <goal>report</goal>
-                        </goals>
-                    </execution>
-                </executions>
             </plugin>
         </plugins>
     </build>
